fix chatbox overlap and improved responsiveness on small screens

--- a/src/styles.css
+++ b/src/styles.css
@@ -1416,13 +1416,13 @@ bottom: 30px;
   }
 
   .gradient-frame {
-    width: 300px;
-    height: 300px;
+    width: 250px;
+    height: 170px;
     margin-top: 60px;
   }
 
   .floating-image {
-    width: 240px;
+    width: 220px;
     height: 170px;
     top: -50px;
   }
